fix some minor layout issues
- navbar impact on general width
- h1 class for the title on customer's details page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -92,6 +92,11 @@ body {
   left: auto;
 }
 
+.navbar-right {
+  margin-right: 0;
+  left: auto;
+}
+
 // --Sidebar
 
 .sidebar {
